k8s/deploy/base/argo-cd/argocd-image-updater.yaml
---
# Source: argocd-image-updater/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-cd-argocd-image-updater
  namespace: "argocd"
  labels:
    helm.sh/chart: argocd-image-updater-0.10.1
    app.kubernetes.io/name: argocd-image-updater
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/version: "v0.13.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-image-updater
      app.kubernetes.io/instance: argo-cd
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/config: 44fe2504e007df9004a5e6c3d7df28340c5781bbec97352fb29404487461f831
      labels:
        app.kubernetes.io/name: argocd-image-updater
        app.kubernetes.io/instance: argo-cd
    spec:
      serviceAccountName: argo-cd-argocd-image-updater
      securityContext:
        {}
      containers:
        - name: argocd-image-updater
          args:
            - run
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          image: "quay.io/argoprojlabs/argocd-image-updater:v0.13.1"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 30
          resources:
            limits:
              cpu: 375m
              memory: 384Mi
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
          - mountPath: /app/config
            name: image-updater-conf
          - mountPath: /app/config/ssh
            name: ssh-known-hosts
          - mountPath: /app/.ssh
            name: ssh-config
          - mountPath: /tmp
            name: tmp
      volumes:
      - configMap:
          items:
          - key: registries.conf
            path: registries.conf
          - key: git.commit-message-template
            path: commit.template
          name: argocd-image-updater-config
          optional: true
        name: image-updater-conf
      - configMap:
          name: argocd-ssh-known-hosts-cm
          optional: true
        name: ssh-known-hosts
      - configMap:
          name: argocd-image-updater-ssh-config
          optional: true
        name: ssh-config
      - emptyDir: {}
        name: tmp
